--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,12 +23,12 @@ brews:
     license: Apache-2.0
     homepage: "https://github.com/DataDog/managed-kubernetes-auditing-toolkit"
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
 checksum:
   name_template: 'checksums.txt'
 snapshot:
