--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,9 @@ on:
       - "v*"
 
 permissions:
-  contents: read
-
+  contents: write
+  pull-requests: write
+  
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
