goreleaser: remove deprecated field 'folder' for homebrew config

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,7 +26,7 @@ brews:
           owner: datadog
           name: managed-kubernetes-auditing-toolkit
           branch: main
-    folder: Formula
+    directory: Formula
     url_template: "https://github.com/DataDog/managed-kubernetes-auditing-toolkit/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
     license: Apache-2.0
     homepage: "https://github.com/DataDog/managed-kubernetes-auditing-toolkit"
